edit super series
Cleaned up errors and mistakes i previously made on this and it looks a lot nice and got all of the three divs to align at the bottom

--- a/styles/seriess.css
+++ b/styles/seriess.css
@@ -4,6 +4,7 @@ h1{
     font-family: monospace;
     font-size: 350%;
     text-decoration: underline;
+    width: 100%;
 }
 img{
     margin-left: auto;
@@ -35,6 +36,11 @@ li{
     margin-left: auto;
 }
 ul{
+    position: relative;
     float: right;
     text-align: center;
+    width: 40%;
+}
+h3{
+    color: white;
 }
