Font changed, home page updated

--- a/styles/seriess.css
+++ b/styles/seriess.css
@@ -1,7 +1,9 @@
+*{
+    font-family:quicksand;
+}
 h1{
     text-align: center;
     color: white;
-    font-family: monospace;
     font-size: 350%;
     text-decoration: underline;
     width: 100%;
@@ -137,4 +139,8 @@ h3{
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
+}
+@font-face{
+    src: url(../fonts/Montserrat/Montserrat-Light.ttf);
+    font-family: quicksand;
 }
