--- a/styles/seriess.css
+++ b/styles/seriess.css
@@ -28,7 +28,7 @@ p{
     font-size: 140%;
 }
 #id1{
-    border: #632A6B .3rem groove;
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 0, 0.2);
 }
 #id2{
     display: inline-block;
