--- a/styles/seriess.css
+++ b/styles/seriess.css
@@ -147,3 +147,10 @@ h3{
     src: url(../fonts/Montserrat/Montserrat-Light.ttf);
     font-family: quicksand;
 }
+@font-face{
+  src: url(../fonts/mclaren.otf);
+  font-family: mclaren;
+}
+h1,h2,h3,h4,h5,h6{
+  font-family:mclaren;
+}
