--- a/styles/f1.css
+++ b/styles/f1.css
@@ -2,6 +2,10 @@
   src: url(../fonts/Montserrat/Montserrat-Light.ttf);
   font-family: quicksand;
 }
+@font-face {
+  src: url(../fonts/mclaren.otf);
+  font-family: mclaren;
+}
 .slideshow-container {
   box-shadow: 12px 12px 2px 1px rgba(0, 0, 0, 0.2);
 }
@@ -13,4 +17,20 @@ p {
   color: white;
   font-size: 140%;
   font-family: quicksand;
+}
+#title {
+  font-family: mclaren;
+  color: white;
+  text-decoration: underline;
+  text-align: center;
+  font-size: 350%;
+}
+table {
+  width: 80%;
+  border-collapse: collapse;
+  border: 1em groove black;
+}
+tr {
+  border-collapse: collapse;
+  border: 0.2em solid black;
 }
